alignment issues is solved

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,6 @@
 /* products */
 .products-box{
   width: 100%;
-  height: 450px;
   overflow-y: scroll;
   display: flex;
   flex-direction: row;
